set random show question set focus to current question in question store view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="grassGreen">#99CC33</color>
     <color name="whiteGray">#f6f5fa</color>
+    <color name="blue">#6699FF</color>
 </resources>
